feat: :sparkles: 添加规范 types类型 样式link引入

--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="/styles/scrollbar.css">
+    <link rel="stylesheet" href="/fonts/AlibabaPuHuiTi-3-55-Regular/result.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>%VITE_APP_TITLE_ZH% %VITE_ENV_SIGN%</title>
   </head>
