mv tailwind.css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
-    <link rel="stylesheet" href="./src/assets/tailwindcss.css" />
+    <link rel="stylesheet" href="./src/tailwind.css" />
     <link rel="stylesheet" href="/styles/main.css" />
     <link rel="stylesheet" href="/styles/scrollbar.css" />
     <link rel="stylesheet" href="/fonts/AlibabaPuHuiTi-3-55-Regular/result.css" />
